@@ -7,12 +7,11 @@ Calculate chemical affinities of formation reactions of species using basis spec
 }
 
 \usage{
-  mosaic(bases, bases2 = NULL, blend = TRUE, stable = list(), ...)
+  mosaic(bases, blend = TRUE, stable = list(), ...)
 }
 
 \arguments{
-  \item{bases}{character, basis species to be changed in the calculation, or list, containing vectors for each group of changing basis species}
-  \item{bases2}{character, second set of changing basis species}
+  \item{bases}{character, basis species to be changed in the calculation, or list, each element of which defines an independent group of changing basis species}
   \item{blend}{logical, use relative abundances of basis species?}
   \item{stable}{list, previously determined stable species}
   \item{...}{additional arguments to be passed to \code{\link{affinity}}}
@@ -25,13 +24,14 @@ This is a way to \dQuote{speciate the basis species}.
 For example, the speciation of sulfur (\samp{SO4-2}, \samp{HSO4-}, \samp{HS-} and \samp{H2S}) as a function of Eh and pH affects the formation affinities, and therefore relative stabilities of iron oxide and sulfide minerals.
 Chemical activity diagrams constructed by assembling sub-diagrams corresponding to the predominant (i.e. most stable) basis species can described as \dQuote{mosaic diagrams}.
 
-The function calculates the affinities using all combination of basis species given as vector arguments to \code{bases} and \code{bases2}.
+The function calculates the affinities using all combination of basis species given as a vector argument to \code{bases}.
+Or, a list can be provided contain any number of vectors that specify different groups of basis species.
+All combinations of basis species in these groups are used for the calculations.
+
 The first species listed in each group should be in the current basis definition, and all the basis species in each group should be related to the first basis species there (i.e. all share the same element).
-A second, independent set of basis species can be provided in \code{bases2} (for example \samp{CO3-2}, \samp{HCO3-}, \samp{CO2}, if the first set of basis species are the sulfur-bearing ones listed above).
 The arguments in \code{...} are passed to \code{affinity} to specify the variable conditions, such as temperature, pressure, and activities of other basis species.
 
 \code{blend} can be a single logical value or multiple values, in order to control the calculations for individual groups of basis species.
-
 If \code{blend} is TRUE (the default), the relative abundances of the basis species in each group are calculated using \code{\link{equilibrate}}, with the total activity taken from the corresponding basis species in the incoming \code{\link{basis}} definition.
 Then, the function calculates overall affinities of the formation reactions of each species by combining reactions written using individual basis species in proportion to the relative abundances of the basis species.
 
@@ -44,23 +44,17 @@ By using the stabilities of minerals in one calculation to identify the basis sp
 This is useful for diagrams for minerals with multiple metallic elements.
 Note that a value in any position of the \code{stable} list forces \code{blend = FALSE} for the corresponding group of basis species, so there is no need to explicity change the \code{blend} argument.
 
-A more flexible method of specifying multiple sets of basis species is now available.
-Instead of using \code{bases} and \code{bases2}, supply a list for just the \code{bases} argument.
-The list should contain any number of vectors specifying the groups of basis species.
-All combinations of basis species in these groups are used for the calculations.
-This overcomes the prior limitation of only having two changing groups of basis species.
-
 }
 
 \value{
 A list containing \code{A.species} (affinities of formation of the species with changing basis species) and \code{A.bases} (affinities of formation of the basis species in terms of the first basis species), each having same structure as the list returned by \code{\link{affinity}}.
+If \code{bases} is a list, \code{A.bases} is also a list, each element of which corresponds to a group of basis species in \code{bases}.
 If \code{blend} is TRUE, the output also contains \code{E.bases} (the output of \code{\link{equilibrate}} for each group of basis species)
-If \code{bases2} is provided, the list also contains \code{A.bases2} (affinities of formation of the second group of basis species).
 }
 
 \seealso{
-\code{demo("mosaic")}, extending the example below by addition of carbonate species in \code{bases2}, and using thermodynamic data from Garrels and Christ, 1965.
-The help page of \code{\link{solubility}} has an example combining \code{mosaic} with solubility calculations.
+\code{demo("mosaic")}, which extends the example below with carbonate species in order to plot a siderite field.
+To calculate mineral solubilities with mosaic calculations that account for ligand speciation, use \code{bases} as the first argument to \code{\link{solubility}}.
 }
 
 \examples{
