@@ -10,7 +10,7 @@
 \newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
 \newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
 
-\section{Changes in CHNOSZ version 1.4.0-37 (2021-04-07)}{
+\section{Changes in CHNOSZ version 1.4.0-38 (2021-04-07)}{
 
   \subsection{NEW FEATURES}{
     \itemize{
@@ -105,6 +105,9 @@
         = "AkDi"} for any aqueous species, instead of setting the charge
       (\code{z}) to NA. This simplifies the more common use case of adding a
       custom aqueous species to OBIGT with mostly NA parameters.
+
+      \item Remove \samp{bases2} argument from \code{mosaic()} (old backward
+      compatibility feature).
       
     }
   }
